syntax = "proto3";
import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

package engineer.v1;

option go_package = "engineer-country-management/pkg/v1/engineer";

service EngineerService {
  rpc AddEngineer (AddEngineerRequest) returns (Engineer);
  rpc ListEngineers (ListEngineersRequest) returns (ListEngineersResponse);
  rpc GetEngineerById (GetEngineerByIdRequest) returns (Engineer);
  rpc UpdateEngineer (UpdateEngineerRequest) returns (Engineer);
  rpc DeleteEngineer (DeleteEngineerRequest) returns (Engineer);
}

message GetEngineerByIdRequest {
  int64 id = 1;
}

message AddEngineerRequest {
  string first_name = 1;
  string last_name = 2;
  int32 gender = 3;
  int64 country_id = 4;
  string title = 5;
}

message Engineer {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  int32 gender = 4;
  int64 country_id = 5;
  string title = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message UpdateEngineerRequest {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  int32 gender = 4;
  string title = 5;
  int64 country_id = 7;
}

message DeleteEngineerRequest {
  int64 id = 1;
}

message ListEngineersRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message ListEngineersResponse {
  repeated Engineer engineers = 1;

  // total engineers in db
  int64 total_count = 2;

  int32 page_number = 3;

  // num of engineers in a page
  int32 page_size = 4;
}